文件分包结构调整

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">EthereumPlatform</string>
+    <string name="app_name">YBY</string>
     <string name="loading">正在加载...</string>
 </resources>
